# rate-limiting-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: dependencies.py  main.py
app/core/: config.py  errors.py  logging.py  security.py
app/infra/: circuit_breaker.py  database.py
app/infra/log_store/: base.py  postgres_log_store.py  sqlite.py
app/infra/rate_limiter/: algorithms.py  base.py  memory.py  redis_limiter.py
app/middleware/: auth.py  logging.py  metrics.py  rate_limit.py  request_id.py  security.py
app/models/: db.py  schemas.py
app/routes/: admin.py  auth.py  health.py  proxy.py
app/services/: auth_service.py  logging_service.py  rate_limit_service.py  upstream_health.py
app/utils/: time.py
grafana/: dashboard.json
migrations/: env.py
migrations/versions/: cdbfbc8cad4d_initial_schema.py
scripts/: generate_token.py  init_db.py  start.sh
tests/: conftest.py  test_enterprise_throughput.py  test_integration.py  test_rate_limit.py  test_security.py
