[project]
name = "rate-limited-gateway"
version = "0.1.0"
description = "A learning-focused API gateway with per-user rate limiting, JWT auth, and request logging. Built with FastAPI, in-memory state, and SQLite — designed to upgrade cleanly to Redis/PostgreSQL."
requires-python = ">=3.11"

dependencies = [
    # Web framework — async-native, modern, type-driven
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # HTTP client for forwarding requests to the upstream backend
    "httpx>=0.27",

    # SQLAlchemy 2.0 with async support — works with SQLite now, Postgres later with no ORM changes
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",

    # JWT encoding and decoding
    "python-jose[cryptography]>=3.3",

    # Config management — reads .env into typed Python objects
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]