[project]
name = "rate-limited-gateway"
version = "0.1.0"
description = "A learning-focused API gateway with per-user rate limiting, JWT auth, and request logging. Built with FastAPI, in-memory state, and SQLite — designed to upgrade cleanly to Redis/PostgreSQL."
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # HTTP client for forwarding requests
    "httpx>=0.27",

    # SQLAlchemy with async support
    # Works with both SQLite (aiosqlite) and PostgreSQL (asyncpg)
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",      # keep for tests (still use SQLite in tests)
    "asyncpg>=0.29",        # NEW: PostgreSQL async driver

    # Redis async client
    "redis>=5.0",           # NEW: includes redis.asyncio

    # Alembic for database migrations (replaces init_db for production)
    "alembic>=1.13",        # NEW: proper migration management

    # JWT
    "python-jose[cryptography]>=3.3",

    # Config management
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]