[project]
name = "rate-limited-gateway"
version = "0.1.0"
description = "A production-shaped API gateway with per-user rate limiting, JWT auth, and request logging. Built with FastAPI, Redis, and PostgreSQL."
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # HTTP client for forwarding requests
    "httpx>=0.27",

    # SQLAlchemy with async support
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",        # PostgreSQL async driver

    # Redis async client (includes redis.asyncio)
    "redis>=5.0",

    # Alembic for database migrations
    "alembic>=1.13",

    # JWT
    "python-jose[cryptography]>=3.3",

    # Config management
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]